# YandexAuthentificationTestTask

./: Dockerfile  compose.yml  pyproject.toml  readme.md  requirements.txt
app/: main.py
app/api/: __init__.py  deps.py
app/api/endpoints/: audio.py  auth.py  users.py
app/core/: config.py  security.py
app/db/: base.py  crud.py  models.py  session.py
app/schemas/: audio.py  token.py  user.py
